
if (USE_GLFW)
  if (USE_OPENGL3)
    add_subdirectory(example_glfw_opengl3)
  endif(USE_OPENGL3)
endif(USE_GLFW)

if (USE_WIN32)
  if (USE_OPENGL3)
    add_subdirectory(example_win32_opengl3)
  endif(USE_OPENGL3)
  if (USE_DIRECTX9)
    add_subdirectory(example_win32_directx9)
  endif(USE_DIRECTX9)
  if (USE_DIRECTX10)
    add_subdirectory(example_win32_directx10)
  endif(USE_DIRECTX10)
  if (USE_DIRECTX11)
    add_subdirectory(example_win32_directx11)
  endif(USE_DIRECTX11)
  if (USE_DIRECTX12)
    add_subdirectory(example_win32_directx12)
  endif(USE_DIRECTX12)
endif(USE_WIN32)
